@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-27T16:27:28Z",
-  "count_outdated" : 281,
-  "uniques_outdated" : 169,
+  "timestamp" : "2022-07-29T01:57:07Z",
+  "count_outdated" : 282,
+  "uniques_outdated" : 170,
   "count" : 289,
   "uniques" : 176,
   "clones" : [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 1,
